Agregue un elemento de parrafo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Mi sitio web</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio id consequuntur, 
+        praesentium temporibus doloremque amet esse. Quae rerum rem assumenda, 
+        ipsa quam eaque ex corrupti aspernatur, repellat, nemo dicta?
+    </p>
     
 </body>
 </html>
